--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,7 @@ dependencies {
   compile "com.amazonaws:aws-java-sdk-dynamodb:$awsVersion"
   compile 'javax.inject:javax.inject:1'
   compile 'com.github.alexmojaki:s3-stream-upload:1.0.1'
+  compile 'com.google.guava:guava:23.2-jre'
 
   testCompile 'org.springframework.boot:spring-boot-starter-test'
 }
