--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
     <junit-platform-runner.version>1.0.0</junit-platform-runner.version>
     <kluent.version>1.30</kluent.version>
     <kotlin-json-assert.version>0.1.0</kotlin-json-assert.version>
+    <mockito-kotlin.version>1.5.0</mockito-kotlin.version>
     <spek.version>1.1.5</spek.version>
     <s3-stream-upload.version>1.0.1</s3-stream-upload.version>
   </properties>
@@ -144,6 +145,12 @@
       <groupId>com.gregwoodfill.assert</groupId>
       <artifactId>kotlin-json-assert</artifactId>
       <version>${kotlin-json-assert.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.nhaarman</groupId>
+      <artifactId>mockito-kotlin-kt1.1</artifactId>
+      <version>${mockito-kotlin.version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
