--- a/pom.xml
+++ b/pom.xml
@@ -29,12 +29,14 @@
     <aws.version>1.11.220</aws.version>
     <guava.version>23.2-jre</guava.version>
     <jcommander.version>1.72</jcommander.version>
-    <junit-platform-runner.version>1.0.0</junit-platform-runner.version>
-    <kluent.version>1.30</kluent.version>
-    <kotlin-json-assert.version>0.1.0</kotlin-json-assert.version>
     <mockito-kotlin.version>1.5.0</mockito-kotlin.version>
-    <spek.version>1.1.5</spek.version>
     <s3-stream-upload.version>1.0.1</s3-stream-upload.version>
+
+    <dockerfile-plugin.version>1.3.6</dockerfile-plugin.version>
+    <jacoco-plugin.version>0.7.9</jacoco-plugin.version>
+    <jcabi-dynamodb-plugin.version>0.9.1</jcabi-dynamodb-plugin.version>
+    <release-plugin.version>2.5.3</release-plugin.version>
+
   </properties>
 
   <dependencies>
@@ -114,39 +116,9 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.jetbrains.spek</groupId>
-      <artifactId>spek-api</artifactId>
-      <version>${spek.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.jetbrains.spek</groupId>
-      <artifactId>spek-junit-platform-engine</artifactId>
-      <version>${spek.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.junit.platform</groupId>
-      <artifactId>junit-platform-runner</artifactId>
-      <version>${junit-platform-runner.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.jetbrains.kotlin</groupId>
-      <artifactId>kotlin-test-junit</artifactId>
-      <version>${kotlin.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.amshove.kluent</groupId>
-      <artifactId>kluent</artifactId>
-      <version>${kluent.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.gregwoodfill.assert</groupId>
-      <artifactId>kotlin-json-assert</artifactId>
-      <version>${kotlin-json-assert.version}</version>
+      <groupId>net.javacrumbs.json-unit</groupId>
+      <artifactId>json-unit</artifactId>
+      <version>1.25.1</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -250,21 +222,38 @@
       </plugin>
 
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <includes>
-            <include>**/*Spek</include>
-            <include>**/*Test</include>
-          </includes>
-        </configuration>
-        <dependencies>
-          <dependency>
-            <groupId>org.junit.platform</groupId>
-            <artifactId>junit-platform-surefire-provider</artifactId>
-            <version>1.0.1</version>
-          </dependency>
-        </dependencies>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <version>${jacoco-plugin.version}</version>
+        <executions>
+          <execution>
+            <id>pre-unit-tests</id>
+            <goals>
+              <goal>prepare-agent</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>pre-integration-test</id>
+            <goals>
+              <goal>prepare-agent-integration</goal>
+            </goals>
+          </execution>
+          <!-- Ensures that the code coverage reports are created after tests have been run -->
+          <execution>
+            <id>post-unit-test</id>
+            <phase>test</phase>
+            <goals>
+              <goal>report</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>post-integration-test</id>
+            <phase>post-integration-test</phase>
+            <goals>
+              <goal>report</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
 
       <plugin>
@@ -312,7 +301,7 @@
       <plugin>
         <groupId>com.jcabi</groupId>
         <artifactId>jcabi-dynamodb-maven-plugin</artifactId>
-        <version>0.9.1</version>
+        <version>${jcabi-dynamodb-plugin.version}</version>
         <configuration>
           <tables>
             <table>${project.build.testOutputDirectory}/users-to-backup.json</table>
@@ -363,7 +352,7 @@
       <plugin>
         <groupId>com.spotify</groupId>
         <artifactId>dockerfile-maven-plugin</artifactId>
-        <version>1.3.6</version>
+        <version>${dockerfile-plugin.version}</version>
         <executions>
           <execution>
             <id>default</id>
