--- a/pom.xml
+++ b/pom.xml
@@ -29,8 +29,10 @@
     <aws.version>1.11.220</aws.version>
     <guava.version>23.2-jre</guava.version>
     <jcommander.version>1.72</jcommander.version>
+    <json-unit.version>1.25.1</json-unit.version>
     <mockito-kotlin.version>1.5.0</mockito-kotlin.version>
     <s3-stream-upload.version>1.0.1</s3-stream-upload.version>
+    <s3mock.version>0.2.3</s3mock.version>
 
     <dockerfile-plugin.version>1.3.6</dockerfile-plugin.version>
     <jacoco-plugin.version>0.7.9</jacoco-plugin.version>
@@ -118,13 +120,19 @@
     <dependency>
       <groupId>net.javacrumbs.json-unit</groupId>
       <artifactId>json-unit</artifactId>
-      <version>1.25.1</version>
+      <version>${json-unit.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>com.nhaarman</groupId>
       <artifactId>mockito-kotlin-kt1.1</artifactId>
       <version>${mockito-kotlin.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.findify</groupId>
+      <artifactId>s3mock_2.12</artifactId>
+      <version>${s3mock.version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -292,6 +300,7 @@
             <configuration>
               <portNames>
                 <portName>dynamodblocal.port</portName>
+                <portName>s3mock.port</portName>
               </portNames>
             </configuration>
           </execution>
@@ -340,9 +349,10 @@
               <includes>
                 <include>**/*IT.*</include>
               </includes>
-              <!-- tell fail safe about dynamo db local port -->
+              <!-- tell fail safe about DynamoDBLocal & s3mock port -->
               <systemPropertyVariables>
                 <dynamodb.port>${dynamodblocal.port}</dynamodb.port>
+                <s3mock.port>${s3mock.port}</s3mock.port>
               </systemPropertyVariables>
             </configuration>
           </execution>
