--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <artifactId>dynamodb-to-s3</artifactId>
   <version>1.0.0-SNAPSHOT</version>
 
-  <description>DynamoDB backup to S3</description>
+  <description>Simple DynamoDB backup to S3</description>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
