--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 language: java
-
+sudo: required
+services:
+  - docker
 after_success:
   - bash <(curl -s https://codecov.io/bash) -t db72c61d-aa61-4b80-9ffd-1a135d29a85f
