--- a/pom.xml
+++ b/pom.xml
@@ -403,11 +403,30 @@
         <groupId>com.spotify</groupId>
         <artifactId>dockerfile-maven-plugin</artifactId>
         <version>${dockerfile-plugin.version}</version>
-        <configuration>
-          <repository>${docker.image.name}</repository>
-          <tag>${project.version}</tag>
-          <contextDirectory>${project.build.directory}</contextDirectory>
-        </configuration>
+        <executions>
+          <execution>
+            <id>default</id>
+            <phase>package</phase>
+            <goals>
+              <goal>build</goal>
+            </goals>
+            <configuration>
+              <repository>${docker.image.name}</repository>
+              <tag>${project.version}</tag>
+              <contextDirectory>${project.build.directory}</contextDirectory>
+            </configuration>
+          </execution>
+          <execution>
+            <id>tag</id>
+            <goals>
+              <goal>tag</goal>
+            </goals>
+            <configuration>
+              <repository>${docker.image.name}</repository>
+              <tag>latest</tag>
+            </configuration>
+          </execution>
+        </executions>
       </plugin>
 
     </plugins>
