--- a/pom.xml
+++ b/pom.xml
@@ -429,6 +429,15 @@
         </executions>
       </plugin>
 
+      <plugin>
+        <groupId>org.eluder.coveralls</groupId>
+        <artifactId>coveralls-maven-plugin</artifactId>
+        <version>4.3.0</version>
+        <configuration>
+          <repoToken>rwBi1kJXYJdfyW6gk3kypMf9l6AHghC9D</repoToken>
+        </configuration>
+      </plugin>
+
     </plugins>
   </build>
 
