--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,6 @@ services:
 after_success:
   - bash <(curl -s https://codecov.io/bash) -t db72c61d-aa61-4b80-9ffd-1a135d29a85f
   - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-  - ./mvnw deploy dockerfile:push@push-latest dockerfile:push@push-version -DskipTests -B -Pdeploy,ossrh --settings .mvn/settings.xml
+  - openssl aes-256-cbc -pass pass:$ENCRYPTION_PASSWORD -in .mvn/pubring.gpg.enc -out .mvn/pubring.gpg -d
+  - openssl aes-256-cbc -pass pass:$ENCRYPTION_PASSWORD -in .mvn/secring.gpg.enc -out .mvn/secring.gpg -d
+  - ./mvnw deploy dockerfile:push@push-latest dockerfile:push@push-version -DskipTests -B -Possrh --settings .mvn/settings.xml
