--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,15 @@
 language: java
-jdk: openjdk8
 sudo: required
 services:
   - docker
-install:
-  - mvn clean
-script:
-  - mvn package -B -V
 after_success:
-  - bash <(curl -s https://codecov.io/bash) -t db72c61d-aa61-4b80-9ffd-1a135d29a85f
-  - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-  - ./mvnw dockerfile:push -DskipTests -B
+  - bash <(curl -s https://codecov.io/bash)
+#  - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
+#  - ./mvnw dockerfile:push -DskipTests -B
 deploy:
   provider: script
   script:
-    - ./mvnw deploy -DskipTests -B --settings .mvn/settings.xml
+    - ./gradlew bintrayUpload
   skip_cleanup: true
   on:
     tags: true
