--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,7 @@ services:
   - docker
 after_success:
   - bash <(curl -s https://codecov.io/bash)
-#  - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-#  - ./mvnw dockerfile:push -DskipTests -B
+  - ./gradlew pushDockerImages
 deploy:
   provider: script
   script:
