--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ apply plugin: "jacoco"
 apply plugin: "idea"
 apply plugin: "maven"
 apply plugin: "maven-publish"
-//apply from: "gradle/docker.gradle"
+apply from: "gradle/docker.gradle"
 
 group = 'io.sensefly.dynamodb-to-s3'
 
@@ -61,9 +61,6 @@ dependencies {
   testCompile 'com.nhaarman:mockito-kotlin-kt1.1:1.5.0'
   testCompile 'io.findify:s3mock_2.12:0.2.3'
   testCompile 'com.amazonaws:DynamoDBLocal:1.11.86'
-
-  //Need sqlite for embedded dynamodb instance
-  testRuntime 'com.almworks.sqlite4java:sqlite4java:1.0.392'
 }
 
 //copy current test runtime configurations into runtimeTestLibraries dir
@@ -85,7 +82,7 @@ jacoco {
 jacocoTestReport {
   reports {
     xml.enabled = true
-    html.enabled = true
+    html.enabled = false
   }
 }
 check.dependsOn jacocoTestReport
