Add debug to Docker entrypoint

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
   - docker
 after_success:
   - bash <(curl -s https://codecov.io/bash)
-  - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
+  - docker login -u $DOCKER_USER -p $DOCKER_PASS
   - ./gradlew pushImageVersion
 deploy:
   provider: script
