--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
 }
 
 group = "io.sensefly.logging.log4j"
-version =  "1.0.0-SNAPSHOT"
+version =  "1.0.0"
 description = "Log4j 2.x appender for AWS CloudWatch logs"
 
 apply plugin: 'kotlin'
